<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.book.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_member"
        android:name="com.example.book.ui.member.MemberFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_record"
        android:name="com.example.book.ui.record.RecordFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/nav_put"
        android:name="com.example.book.ui.put.PutFragment"
        android:label="@string/menu_put"
        tools:layout="@layout/fragment_put" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.example.book.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.book.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>