<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btm_detail"
        android:icon="@drawable/detail"
        android:onClick="onNavigationItemSelected"
        android:title="@string/btm_detail" />

    <item
        android:id="@+id/btm_talk"
        android:icon="@drawable/talk"
        android:onClick="onNavigationItemSelected"
        android:title="@string/btm_talk" />

    <item
        android:id="@+id/btm_add_shopping"
        android:icon="@drawable/add_shopping"
        android:title="@string/btm_add_shopping" />

    <item
        android:id="@+id/btm_paid"
        android:icon="@drawable/paid"
        android:onClick="onNavigationItemSelected"
        android:title="@string/btm_paid" />
</menu>