<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_bottom_navigation"
    app:startDestination="@id/nav_detail">

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.example.book.ui.detail.DetailFragment"
        android:label="@string/btm_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_talk"
        android:name="com.example.book.ui.talk.TalkFragment"
        android:label="@string/btm_talk"
        tools:layout="@layout/fragment_talk" />

    <fragment
        android:id="@+id/nav_paid"
        android:name="com.example.book.ui.paid.PaidFragment"
        android:label="@string/btm_paid"
        tools:layout="@layout/fragment_paid" />
</navigation>