<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_account"
            style="@style/text_view_style"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:text="帳號" />

        <EditText
            android:id="@+id/login_textaccount"
            style="@style/edit_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginStart="14dp"
            android:layout_toLeftOf="@+id/login_account"
            android:layout_toEndOf="@+id/login_account"
            android:hint="@string/nav_header_subtitle"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1">

        <TextView
            android:id="@+id/login_password"
            style="@style/text_view_style"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:text="密碼" />

        <EditText
            android:id="@+id/login_textapassword"
            style="@style/edit_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginStart="14dp"
            android:layout_toLeftOf="@+id/login_password"
            android:layout_toEndOf="@+id/login_password"
            android:hint="123456"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <CheckBox
            android:id="@+id/login_auto"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="自動登入"
            android:textColor="@color/button_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/login_remember"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/login_auto"
            android:text="記住密碼"
            android:textColor="@color/button_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <Button
            android:id="@+id/login_login"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:onClick="onClickLoginBtn"
            android:text="@string/login"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_clear"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/login_login"
            android:onClick="onClickLoginBtn"
            android:text="@string/clear"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_forget"
            style="@style/text_view_style"
            android:layout_width="68dp"
            android:onClick="onClickLoginBtn"
            android:text="@string/forget"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_register"
            style="@style/text_view_style"
            android:layout_width="68dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/login_forget"
            android:onClick="onClickLoginBtn"
            android:text="@string/register"
            android:textColor="@color/text"
            android:textSize="16sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>